// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 eEWzFy"
>
  18
</span>
`;

exports[`Counter w/ any props 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 eEWzFy className"
  id="Counter"
  title="title"
>
  18
</span>
`;

exports[`Counter w/ design: accent 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 bfFMsF"
>
  18
</span>
`;

exports[`Counter w/ design: critical 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 TvxVN"
>
  18
</span>
`;

exports[`Counter w/ design: disabled 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 bdkrgr"
>
  18
</span>
`;

exports[`Counter w/ design: neutral 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 eEWzFy"
>
  18
</span>
`;

exports[`Counter w/ design: success 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 hRRVfc"
>
  18
</span>
`;

exports[`Counter w/ design: warning 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 fWIvvm"
>
  18
</span>
`;

exports[`Counter w/ position: absolute 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 dZa-Dui"
>
  18
</span>
`;

exports[`Counter w/ position: relative 1`] = `
<span
  class="Counterstyles__Box-f3lq56-0 eEWzFy"
>
  18
</span>
`;
